Add basic app with routing, api, test, lint

--- a/package.json
+++ b/package.json
@@ -3,13 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "lint": "eslint --max-warnings 0 '**/*.{js,jsx}'",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start"
   },
+  "lint-staged": {
+    "**/*.{js,jsx}": "eslint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
-    "next": "9.3.0",
-    "react": "16.13.0",
-    "react-dom": "16.13.0"
+    "next": "^9.3.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
+    "eslint": "^6.8.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
+    "husky": "^4.2.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^25.2.7",
+    "jest-fetch-mock": "^3.0.3",
+    "lint-staged": "^10.1.2",
+    "standard": "^14.3.3",
+    "stylelint-config-standard": "^20.0.0"
   }
 }
