--- a/package.json
+++ b/package.json
@@ -41,5 +41,18 @@
     "lint-staged": "^10.1.2",
     "standard": "^14.3.3",
     "stylelint-config-standard": "^20.0.0"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/zeit/next.js/tree/canary/packages/create-next-app).",
+  "main": "jest.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SheehanTX/meteo.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SheehanTX/meteo/issues"
+  },
+  "homepage": "https://github.com/SheehanTX/meteo#readme"
 }
