--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "swr": "^0.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
