--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lint": "eslint --max-warnings 0 '**/*.{js,jsx}'",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -20,28 +20,28 @@
   },
   "dependencies": {
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.3.4",
+    "next": "^9.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "swr": "^0.2.0"
+    "swr": "^0.2.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.4",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme-to-json": "^3.5.0",
     "eslint": "^6.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^3.0.0",
-    "husky": "^4.2.3",
+    "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.2.7",
+    "jest": "^25.5.4",
     "jest-fetch-mock": "^3.0.3",
-    "lint-staged": "^10.1.2",
-    "standard": "^14.3.3",
+    "lint-staged": "^10.3.0",
+    "standard": "^14.3.4",
     "stylelint-config-standard": "^20.0.0"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/zeit/next.js/tree/canary/packages/create-next-app).",
